force-app/main/default/objects/Apttus_Config2__TempObject__c/Apttus_Config2__TempObject__c.object-meta.xml
<CustomObject>
    <description>A container for temporary objects used by the application</description>
    <label>Temp Object  (CPQ)</label>
    <nameField>
        <displayFormat>TO-{0000000000}</displayFormat>
        <label>Temp Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Objects (CPQ)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>