force-app/main/default/objects/Apttus_Config2__TempObject__c/fields/Apttus_Config2__AssetCache__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetCache__c</fullName>
    <description>The asset cache</description>
    <inlineHelpText>The asset cache</inlineHelpText>
    <label>Asset Cache</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>