force-app/main/default/objects/Apttus_Config2__TempObject__c/fields/Apttus_Config2__AssetDataCache__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AssetDataCache__c</fullName>
    <description>The asset data cache</description>
    <inlineHelpText>The asset data cache</inlineHelpText>
    <label>Asset Data Cache</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>