force-app/main/default/objects/Apttus_Config2__TempObject__c/fields/Apttus_Config2__CartCache__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartCache__c</fullName>
    <description>The cart cache</description>
    <inlineHelpText>The cart cache</inlineHelpText>
    <label>Cart Cache (Deprecated)</label>
    <length>128000</length>
    <type>LongTextArea</type>
</CustomField>