force-app/main/default/objects/Apttus_Config2__TempObject__c/fields/Apttus_Config2__Data__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Data__c</fullName>
    <description>Temporary data</description>
    <label>Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>