force-app/main/default/objects/Apttus_Config2__TempObject__c/fields/Apttus_Config2__LocationCache__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LocationCache__c</fullName>
    <description>The location cache</description>
    <label>Location Cache</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>