force-app/main/default/objects/Apttus_Config2__TempObject__c/fields/Apttus_Config2__OptionFilterCache__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionFilterCache__c</fullName>
    <description>The option filter cache</description>
    <label>Option Filter Cache</label>
    <length>128000</length>
    <type>LongTextArea</type>
</CustomField>